public/style.css
/* ... */
.btn1 {
  --front-bg: #FF8F8F;
  --edge-bg: #C85F5F;
  --front-hover-bg: #FF6363;
  --edge-hover-bg: #D44C4C;

  --text-hover-color: #37000C;
}
.btn2 {
  --front-bg: #FFD876;
  --edge-bg: #EDBC39;
  --front-hover-bg: #FFC94F;
  --edge-hover-bg: #F0B522;
}
.btn3 {
  --front-bg: #b7fab7;
  --edge-bg: #67C767;
  --front-hover-bg: #7af57a;
  --edge-hover-bg: #38B538;
}
.btn4 {
  --front-bg: #b7b7fa;
  --edge-bg: #7575f5;
  --front-hover-bg: #9797F7;
  --edge-hover-bg: #4B4BEB;
}


.btn:active .front{
  transform: translateY(-0.15rem);
  transition: transform 10ms;
}

.btn:active .edge{
  transition: transform 10ms;
}

.menuButtons img{
  height: 50px;
  width: 50px;
  object-fit: contain;
  align-self: flex-start;
}

/*------------------------*/
/*------ UpdateLog -------*/
/*------------------------*/

.container-log{
  justify-content: flex-start;
  margin-inline: auto;
  /* #ffe4e4 */
  box-sizing: border-box;
}
.updatelog{
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  height: 16.125rem;

  border-radius: 10px 10px 0 0;
}


.log {
  font-family: 'Comfortaa';
  letter-spacing: 10%;
  font-size: 0.875rem;
  font-weight: 600;

  display: flex;
  justify-content: space-between;
  align-items: center; 
  padding: 0.438rem 0.636rem 0.438rem 0.939rem;
}

.log #chevron-up-down{
  stroke: #000000;
}
.log #chevron-up-down:hover{
  stroke: #DE6D85;
}
.log #chevron-up-down:active{
  stroke: white;
}

.log-btn.opened #chevron-up-down{
  transform: rotate(180deg);
}


.log p{
  margin: 0;
}

.log-btn{
  width: 1.25rem;
  height: 1.25rem;
  background-color: #FFFAF9;
  text-align: center;

  padding: 0;

  border-radius: 20%;
  border: none;
  box-shadow: 0 1px 1px #de6d8580;
  cursor: pointer;
}

.updatelog .log-btn:hover{
  outline: 1px solid #DE6D85;
}
.updatelog .log-btn:active{
  background-color: #DE6D85;
}


.log-top{
  background-color: #FFDAD3;
  border-radius: 10px 10px 0 0;
  width: 13rem;
  
  box-shadow: 0 5px 7px #de6d8580;
  transition: 450ms ease-out;
  border-radius: 10px;
  border: solid 1px #741A2E;
}
.log-top.opened{
  border-radius: 10px 10px 0 0;
}

.log-message{
  box-sizing: border-box;
  position: absolute;
  width: 13rem;
  background-color: #FFFAF9;
  z-index: 1;
  max-height: 14rem;
  left: 0;
  overflow-y: scroll;
  overflow-x: hidden;

  width: 100%;

  transition: 450ms ease-out;

  scrollbar-width: thin; 
  scrollbar-color: #DE6D85 #f1f1f1;  

  box-shadow: 0 5px 7px #de6d8580;

  height: 0;
  padding: 0;
  border: solid 1px #741A2E;
  
  visibility: hidden;
}

.log-message.opened{
  height: 100%;
  padding: 1.25rem 0.939rem 0 0.626rem;
  border-radius: 0 0 10px 10px;
  border: solid 1px #741A2E;
  visibility: visible;
}

.updatelog .upd{
  margin: 0 0 0.626rem 0;
  color: #741A2E;
}

.updatelog .updtop{
  font-family: 'KosugiMaru';
  display: flex;
  gap: 0.313rem;
}

li::marker{
  font-size: 0.813rem;
}

.updatelog .log-message h3::before{
  content: "";
  display: inline-block;
  width: 0.938rem;
  height: 0.938rem;
  margin-right: 0.3rem;
  vertical-align: middle;
  background: url("images/icons/chevrons/chevron-down-svgrepo-com.svg") center / contain no-repeat;
}


.updatelog .updtop p{
  align-self: end;
  color: rgb(0, 0, 0, 0.60);

  font-size: 0.813rem;
  margin: 0 0 0.313rem 0;
}
.updatelog .log-message .updtop p{
  font-family: 'mononoki-regular';
}
.updatelog .log-message h3{
  font-size: 1rem;
  margin: 0 0 0.313rem 0;
  margin-bottom: 0;
}
.updatelog .log-message .upd p{
  font-size: 0.813rem;
  margin: 0 0 0.313rem 0;
  font-family: 'mononoki-bold';
}
.updatelog .log-message hr{
  border-top: 1px solid #de6d8580;
}




.Chloe{
  width: 7.813rem;
  height: auto;
  border-radius: 15px;
  border: solid 1px #741A2E;
  margin-top: 0.25rem;
}


/*------------------------*/
/*------ Guestbook -------*/
/*------------------------*/

.container-guestbook{
  display: flex;
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  gap: 0.625rem;

  padding: 1rem 0 0.626rem 0;
  height: 100%;
}

.container-guestbook .front{
  display: flex; 
  justify-content: center;
  align-items: center;
  position: relative;
  left: 0;
  top: 0;
  background-image: url("images/bg/guestbook-pink.jpg");
  background-size: 200%;

  width: 10rem;
  height: 2.5rem;
  border-radius: 10px;
  border: solid 0.2px #741A2E;
  box-shadow: 0 0.313rem 0.438rem #de6d8580;
  transition: 0.2s;

  font-family: 'Comfortaa';
  font-weight: 900;
  color: #741A2E;
}

.container-guestbook .front:hover{
  width: 11rem;
  height: 3rem;
  color: #DE6D85;
  background-image: url("images/bg/guestbook-lightpink.jpg");
  transition: 0.3s;
  cursor: pointer;
}

.container-guestbook .front:active{
  width: 10rem;
  height: 2.5rem;
  color: #DE6D85;
  background-image: url("images/bg/guestbook-lightpink.jpg");
  transition: 0.3s;
}

/* will return here later */
.container-guestbook img{
  height: 4.8rem;
  width: 6.25rem;

  border-radius: 10px;
  border: solid 0.2px #741A2E;
}

.guestbook-frame.iframe{
  display: none;
}




/*------------------------*/
/*------ Centerpage ------*/
/*------------------------*/

/*Had some problems to figure out how do justify/align-items/content work

apparently, justify-self cannot be applied to elements in flexbox cuz it considers all those individual elements 
as one big element that gets changed.
basically trying to align an item within itself 
and based on that justify-items cannot be applied too

justify-content on the other hand manages a free space of the whole container


*/
.centerpage {
  display: flex;
  flex-direction: column;
  
  align-self: center;
  align-items: center;
  
  width: 100%;
  
  /*background: linear-gradient(rgba(255, 243, 243, 0.25) 90%, rgba(231, 158, 158, 0.25)); */
  /* transparency of background could only be achieved in this way sadly */
}
/* ... */

